# AlgoRs

./: .gitignore  Cargo.toml  README.md
src/: arithmetic.rs  karatsuba.rs  main  main.rs  power.rs  search.rs  sort.rs  strassen.rs
src/b1/ch1/: sort.rs
