[package]
name = "algo_zoo"
version = "0.1.0"
authors = ["krishen <krishenm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert = "0.2.1"
lazy_static = "1.1.1"
quickcheck = "1.0.3"
nalgebra = "0.27.1"
num-traits = "0.2.14"

